group 'com.getnet'
version '1.0-SNAPSHOT'

buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.1.RELEASE")
		classpath("org.flywaydb:flyway-gradle-plugin:4.0.3")
    }
}

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'spring-boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: "org.flywaydb.flyway"

jar {
    baseName = 'leadplus'
    version =  '1.0.0'
}

repositories {
    mavenCentral()
    jcenter()
    maven { url "https://repository.jboss.org/nexus/content/repositories/releases" }
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

dependencies {
    
   	compile("org.springframework.cloud:spring-cloud-aws-jdbc:1.0.4.RELEASE")
    compile("org.springframework.cloud:spring-cloud-aws-context:1.0.4.RELEASE")
	compile("com.amazonaws:aws-java-sdk:1.11.41")
    
    compile("org.springframework.boot:spring-boot-starter-web")
    compile("org.springframework.boot:spring-boot-starter-data-rest")
    compile("org.springframework.boot:spring-boot-starter-data-jpa"){
		exclude module: 'hibernate-core'
		exclude module: 'hibernate-entitymanager'
	}
    compile("org.springframework.boot:spring-boot-starter-security")
    compile("org.springframework.boot:spring-boot-starter-mail")
    compile("org.springframework.boot:spring-boot-starter-security")
	compile("org.springframework.boot:spring-boot-starter-jdbc")
 	
 	compile("org.apache.pdfbox:pdfbox:1.8.9")
    compile("org.freemarker:freemarker")
    
    compile("postgresql:postgresql:9.0-801.jdbc4")
	compile("org.hibernate:hibernate-core:5.1.0.Final")
 	compile("org.hibernate:hibernate-entitymanager:5.1.0.Final")
	compile("org.flywaydb:flyway-core:4.0.3")
 	
    compile("com.fasterxml.jackson.core:jackson-databind")
    compile("com.jayway.jsonpath:json-path:0.9.1")

    compile('io.springfox:springfox-swagger2:2.4.0')
    compile('io.springfox:springfox-swagger-ui:2.4.0')
    
    compile('org.jsoup:jsoup:1.10.1')

    testCompile("org.springframework.boot:spring-boot-starter-test")
    testCompile("junit:junit")
}

flyway {
    url = "jdbc:postgresql://localhost:5432/applica"
    user = "postgres"
    password = "***REMOVED***"
    placeholderPrefix = "\$&{"
    placeholderSuffix = "}&\$"
}

task wrapper(type: Wrapper) {
    gradleVersion = '2.7'
}